<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <com.github.glomadrian.grav.GravView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
        app:array_colors="@array/red"
        app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
        app:regular_cell_size="100"
        app:regular_variance="200"
        app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
        app:ball_size="3dp"
        app:animationGenerators="@array/BallWaveAnimations"
        app:side_to_side_min_duration="3000"
        app:side_to_side_max_duration="5000"
        app:side_to_side_direction="downToUp"
        app:shake_variance="50dp"
        app:ball_size_from_size="2dp"
        app:ball_size_to_size="10dp"
        app:shake_direction="horizontal"

    />

    <com.github.glomadrian.grav.GravView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
        app:array_colors="@array/red"
        app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
        app:regular_cell_size="100"
        app:regular_variance="200"
        app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
        app:ball_size="3dp"
        app:animationGenerators="@array/BallWaveAnimations"
        app:side_to_side_min_duration="3000"
        app:side_to_side_max_duration="5000"
        app:side_to_side_direction="upToDown"
        app:shake_variance="50dp"
        app:ball_size_from_size="2dp"
        app:ball_size_to_size="10dp"
        app:shake_direction="horizontal"

        />

    <LinearLayout
        android:id="@+id/activitylogin_LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/login" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/activitylogin_LinearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">
    <com.yagneshlp.slambook.other.StereoView
        android:id="@+id/stereoView"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center">
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/icon_password"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/hint_password"
                android:focusable="true"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColorHint="@color/font_gray"/>
            <ImageView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="20dp"
                android:onClick="login"
                android:src="@drawable/ic_submit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/icon_user"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:maxLines="1"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:hint="@string/hint_email"
                android:textColorHint="@color/font_gray"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/rv_user"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="20dp"
                android:onClick="goNXT"
                android:src="@drawable/icon_next"/>


        </LinearLayout>

    </com.yagneshlp.slambook.other.StereoView>

    <Button
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:layout_gravity="bottom"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/TextColor"
        android:textSize="15dp" />

    </LinearLayout>





</RelativeLayout>
